argocd/components/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - image: nginxdemos/hello
          imagePullPolicy: Always
          name: hello-world
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
      restartPolicy: Always
