argocd/components/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
  - port: 8123
    targetPort: 80
  selector:
    service: hello-world
