argocd/components/hello-world/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: hello-world
  spec:
    ingressClassName: nginx
    rules:
      - host: kubernetes.docker.internal
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: hello-world
                  port:
                    number: 8123
              path: /hello-world
